examples/array.fp
new arr1: Array<int> = []
new arr2: int[] = []
new arr3 = [0, 1, 2] // int[]
// new arr4 = [0, 1.1, 2.2] // error

// new *buffer = &arr1
